--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,49 @@
 .home-main{
     /* margin-top: 15rem; */
     height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.home-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20rem;
+    height: 20rem;
+    flex-direction: column;
+}
+
+.home-content-title{
+    font-size: 6rem;
+    font-weight: 800;
+    color: #fff;
+}
+
+.home-content-more{
+    color: #fff;
 }
 
 .view-main{
     position: relative;
-    
-   
+    width: 100%;
+}
+
+.view-main-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.view-main-container-text{
+    width: 50%;
+}
+
+.view-main-container-list{
+    /* width: ; */
 }
 
 .view-content{
@@ -83,33 +120,83 @@
     height: 100%;
 }
 
+.view-list-img{
+    width: 140px;
+    height: 140px;
+}
+
+.view-card-img{
+    width: 500px;
+    height: 500px;
+}
+
 .join-container{
     display: flex;
     justify-content: center;
 }
 
-.overlay {
-    display: none;
+.join-main{
+   padding: 4rem 0;
+}
+
+.overlay-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
+    background-color: rgba(170, 170, 170, 0.8); /* 使用 #aaa 的颜色 */
+}
 
-  .modal {
+.overlay {
     display: none;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    text-align: center;
-  }
+    
+}
 
-  .modal-button {
-    margin: 10px;
-    padding: 10px 20px;
+.game-modal {
+    display: none;
+    background-color: #f9f9f9; /* 淡灰色背景 */
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    height: 24rem;
+    width: 300px;
+    display: flex;
+    flex-direction: column; /* 确保垂直布局 */
+    align-items: center;
+    justify-content: center;
+}
+
+.game-modal p {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333; /* 深灰色文本颜色 */
+    margin-bottom: 10px;
+}
+
+.game-modal text {
     font-size: 16px;
+    color: #555; /* 中灰色文本颜色 */
+    margin-bottom: 20px;
+}
+
+.modal-button {
+    margin: 10px;
+    padding: 12px 24px;
+    font-size: 18px;
     cursor: pointer;
-  }
+    background-color: #3498db; /* 水蓝色按钮背景 */
+    color: #fff; /* 白色文本颜色 */
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease; /* 添加渐变效果 */
+}
+
+.modal-button:hover {
+    background-color: #258cd1; /* 按钮悬停时的背景色 */
+    color: #fff; /* 白色文本颜色 */
+}
