--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-.home-main{
+.home-main {
     /* margin-top: 15rem; */
     height: 100vh;
     width: 100vw;
@@ -7,8 +7,7 @@
     align-items: center;
 }
 
-
-.home-content{
+.home-content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,44 +16,48 @@
     flex-direction: column;
 }
 
-.home-content-title{
+.home-content-title {
     font-size: 6rem;
     font-weight: 800;
     color: #fff;
 }
 
-.home-content-more{
+.home-content-more {
     color: #fff;
     cursor: pointer;
+    font-family: 'Noto Serif', serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-left: 40px;
 }
 
-.bd-placeholder-img{
+.bd-placeholder-img {
     width: 100vw;
     height: 500px;
     /* background-size: cover; */
     object-fit: cover;
 }
 
-.view-main{
+.view-main {
     position: relative;
     width: 100%;
 }
 
-.view-main-container{
+.view-main-container {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.view-main-container-text{
+.view-main-container-text {
     width: 50%;
 }
 
-.view-main-container-list{
+.view-main-container-list {
     /* width: ; */
 }
 
-.view-content{
+.view-content {
     width: 80%;
     /* height: 2040px; */
     display: flex;
@@ -67,14 +70,14 @@
     /* margin-top: 60%; */
 }
 
-.view-container{
+.view-container {
     width: 100%;
     background-color: #fff;
     display: flex;
     justify-content: center;
 }
 
-.view-container-div{
+.view-container-div {
     display: flex;
     max-width: 60rem;
     flex-direction: column;
@@ -82,49 +85,49 @@
     align-items: center;
 }
 
-.view-content-base{
+.view-content-base {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #fff;
 }
 
-.view-content-title{
+.view-content-title {
     color: #000;
-    font-family: "Helvetica 85 Heavy",sans-serif;
+    font-family: 'Helvetica 85 Heavy', sans-serif;
     font-weight: 700;
-    padding: 2.5rem 5.625rem 2.5rem 5.625rem
+    padding: 2.5rem 5.625rem 2.5rem 5.625rem;
 }
 
-.view-content-setitle{
+.view-content-setitle {
     color: #000;
-    font-family: "Helvetica 85 Heavy",sans-serif;
+    font-family: 'Helvetica 85 Heavy', sans-serif;
     font-weight: 700;
-    padding: 0rem 2rem
+    padding: 0rem 2rem;
 }
 
-.view-content-titleline{
+.view-content-titleline {
     width: 5.625rem;
     height: 3px;
     margin-top: 1.25rem;
-    background-color: #FFC600;
+    background-color: #ffc600;
     margin-left: 2rem;
 }
 
-.view-content-text{
+.view-content-text {
     line-height: 2.05rem;
-    font-family: "Helvetica 45 Light",sans-serif;
-    padding: 1rem 2rem
+    font-family: 'Helvetica 45 Light', sans-serif;
+    padding: 1rem 2rem;
 }
 
-.view-content-img{
+.view-content-img {
     padding: 1rem 2rem;
     width: 100%; /* 你想要的容器宽度 */
     height: auto; /* 你想要的容器高度 */
     overflow: hidden; /* 确保超出容器的部分被裁剪 */
 }
 
-.view-content-wrapper{
+.view-content-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -132,29 +135,29 @@
     align-items: center;
 }
 
-.view-content-img-info{
+.view-content-img-info {
     object-fit: cover; /* 控制图片如何适应容器，保持纵横比且不变形 */
     width: 100%;
     height: 100%;
 }
 
-.view-list-img{
+.view-list-img {
     width: 140px;
     height: 140px;
 }
 
-.view-card-img{
+.view-card-img {
     width: 100%;
     height: 500px;
 }
 
-.join-container{
+.join-container {
     display: flex;
     justify-content: center;
 }
 
-.join-main{
-   padding: 4rem 0;
+.join-main {
+    padding: 4rem 0;
 }
 
 .overlay-container {
@@ -171,7 +174,6 @@
 
 .overlay {
     display: none;
-    
 }
 
 .game-modal {
